css/main.css
/* ... */
#about h2{
	color:#01143C;
	font-weight: 900;
	font-size: 42;
}
#about h3 {
   color: #425B7A;
}

.tm-section-2 {	max-width: 1050px; }
.tm-section-3-inner { max-width: 1250px; }
.tm-section-5-inner { 
	padding: 80px 5%;
	max-width: 1000px; 
}

.tm-section-2 { padding: 60px 5% 40px; }
.tm-section-3 {	padding: 60px 5% 20px; }

.tm-section-4 { 
	padding: 60px 5% 90px; 
	max-width: 900px;
}

.tm-media-img { 
	padding: 0.5rem;
	box-shadow: 0px 0px 4px 2px rgba(197, 197, 197, 0.5);
	display: block;
	margin: 10px 100px 30px;
}
.tm-media-title {
	padding-bottom: 10px;
	line-height: 1.5;
}

.tm-media-description {	line-height: 2em; }

.tm-media-row {
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	-webkit-flex-direction: row;
	    -ms-flex-direction: row;
	        flex-direction: row;
	-webkit-align-items: center;
	    -ms-flex-align: center;
	        align-items: center;
	-webkit-justify-content: center;
	    -ms-flex-pack: center;
	        justify-content: center;
}

.tm-media-row:last-child { margin-bottom: 0; }

.tm-gray-text { color: #666666; }
.tm-gray-text-2 { color: #656565; }

@media only screen and (min-width: 544px) {
	
	.tm-slide-content-div { margin-top: 0; }
	.tm-media-row {	-webkit-flex-direction: row;	-ms-flex-direction: row;	flex-direction: row; }
	.tm-flex-child-2 { -webkit-order: 2; -ms-flex-order: 2; order: 2; }
	.tm-flex-child-1 { -webkit-order: 1; -ms-flex-order: 1; order: 1; }
	.tm-social-icon-link { margin-right: 0px; }		
}

@media only screen and (min-width: 768px) {

	.tm-slide-content-div { padding: 4%;  }
	.cd-hero-slider h2 { font-size: 3em; }
	.cd-hero-slider { height: 630px; }
	.tm-slide-content-div { padding: 5%; }
	.cd-hero-slider p.m-b-mid { margin-bottom: 40px; }
	.tm-media-text-container { padding-left: 150px; padding-right: 0px;}
	.tm-media-text-container-left { 
		padding-left: 0; 
		padding-right: 0px;
	}
	.tm-plan { margin-bottom: 0; }
	.tm-section-3 {	padding: 0px 5% 0px;	}
	.tm-section-4 { padding: 0px 5% 0px; }
}




/*=====Things I Do=====*/



/*DEFAULTS*/
/*  1. Basic  ------------------------------------------------------- */

*,
*:before,
*:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
}
/*  2. Links  ------------------------------------------------------- */

a, a:visited {
   text-decoration: none;
   outline: 0;
   color: #11ABB0;

   -webkit-transition: color .3s ease-in-out;
   -moz-transition: color .3s ease-in-out;
   -o-transition: color .3s ease-in-out;
   transition: color .3s ease-in-out;
}
a:hover, a:focus { color: #313131; }
p a, p a:visited { line-height: inherit; }
/*  3. Images  --------------------------------------------------------- */

img {
   max-width: 100%;
   height: auto;
}
img.pull-right { margin: 12px 0px 0px 18px; }
img.pull-left { margin: 12px 18px 0px 0px; }

/*  4. Buttons  --------------------------------------------------------- */

.button,
.button:visited,
button,
input[type="submit"],
input[type="reset"],
input[type="button"] {
   font: 16px/30px 'opensans-bold', sans-serif;
   background: #11ABB0;
   display: inline-block;
	text-decoration: none;
   letter-spacing: 0;
   color: #fff;
	padding: 12px 20px;
	margin-bottom: 18px;
   border: none;
   cursor: pointer;
   height: auto;

   -webkit-transition: all .2s ease-in-out;
	-moz-transition: all .2s ease-in-out;
	-o-transition: all .2s ease-in-out;
	-ms-transition: all .2s ease-in-out;
	transition: all .2s ease-in-out;

   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   -khtml-border-radius: 3px;
   border-radius: 3px;
}

.button:hover,
button:hover,
input[type="submit"]:hover,
input[type="reset"]:hover,
input[type="button"]:hover {
   background: #3d4145;
   color: #fff;
}

.button:active,
button:active,
input[type="submit"]:active,
input[type="reset"]:active,
input[type="button"]:active {
   background: #3d4145;
   color: #fff;
}

.button.full-width,
button.full-width,
input[type="submit"].full-width,
input[type="reset"].full-width,
input[type="button"].full-width {
	width: 100%;
	padding-left: 0 !important;
	padding-right: 0 !important;
	text-align: center;
}

/* Fix for odd Mozilla border & padding issues */
button::-moz-focus-inner,
input::-moz-focus-inner {
    border: 0;
    padding: 0;
}
/* ------------------------------------------------------------------ */
/* GRID
---------------------------------------------------------------------
   gutter = 40px.
/* ------------------------------------------------------------------ */

/* default
--------------------------------------------------------------- */
.row {
   width: 96%;
   max-width: 1020px;
}
/* fixed width for IE8 */
.ie .row { width: 1000px ; }

.narrow .row { max-width: 980px; }

.row .row { width: auto; max-width: none; margin: 0px; }

/* row clearing */
.row:before,
.row:after {
    content: " ";
    display: table;
}
.row:after {
    clear: both;
}

.column, .columns {
   position: relative;
   padding: 0px;
   min-height: 1px;
   float: left;
}
.column.centered, .columns.centered  {
    float: none;
    margin: 0 auto;
}

/* removed gutters */
.row.collapsed > .column,
.row.collapsed > .columns,
.column.collapsed, .columns.collapsed  { padding: 0; }

[class*="column"] + [class*="column"]:last-child { float: right; }
[class*="column"] + [class*="column"].end { float: right; }

/* column widths */
.row .one         { width: 8.33333%; }
.row .two         { width: 16.66667%; }
.row .three       { width: 25%; }
.row .four        { width: 33.33333%; }
.row .five        { width: 41.66667%; }
.row .six         { width: 50%; }
.row .seven       { width: 58.33333%; }
.row .eight       { width: 66.66667%; }
.row .nine        { width: 75%; }
.row .ten         { width: 83.33333%; }
.row .eleven      { width: 91.66667%; }
.row .twelve      { width: 100%; }

/* Offsets */
.row .offset-1    { margin-left: 8.33333%; }
.row .offset-2    { margin-left: 16.66667%; }
.row .offset-3    { margin-left: 25%; }
/* ... */

